--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
     <style>
         @font-face{
             font-family: 'MontserratBold';
-            src:url(Montserrat-Bold.woff);
+            src:url(assets/fonts/Montserrat-Bold.woff);
             font-weight: bold;
+        }@font-face{
+            font-family: 'MontserratRegular';
+            src:url(assets/fonts/Montserrat-Regular.woff);
+            font-weight: normal;
         }
-        @font-face{
-            font-family: 'GothamPro-Light';
-            src:url(../fonts/GothamPro-Light.woff);
-            font-style: normal;
-        }
-        @font-face{
-            font-family: 'GothamPro-LightItalic';
-            src:url(../fonts/GothamPro-LightItalic.woff);
-            font-style: normal;
-        }
+
 
         .app-header{
             background:rgba(0, 183, 178, 1);
@@ -45,9 +40,35 @@
         a{
             color: white;
         }
-        .header-center{
+        select{
+            border-color: #00BCD4;
+            margin-bottom: 10px;
+        }
+        .try{
+            background:rgba(229, 229, 229, 1);
+            width: 350px;
+            border-radius: 8px;
 
+        }.try{
+            background:rgba(229, 229, 229, 1);
+            width: 350px;
+            border-radius: 8px;
 
+        }
+        form{
+            padding-left: 80px;
+        }
+
+        label{
+            color: #00BCD4;
+            font-family:'MontserratRegular' ;
+            border-radius:8px;margin: 0;
+
+        }
+        input{
+            border-color:#00BCD4 ;
+            border-radius:8px;
+            margin-bottom: 10px;
         }
         .header-right{
             display: inline;
@@ -94,7 +115,7 @@
                 </ul>
             </div>
         <div style="align-items: center" class="header-right">
-           <img style="display: inline" src="pointer.png">
+           <img style="display: inline" src="assets/image/pointer.png">
             <p style="display: inline; color:white;margin-left: 10px">Новороссийск</p>
         </div>
 
@@ -134,55 +155,124 @@
 <!--            </form>-->
 <!--            <button onclick="addNewObjectOnMap()">Отправить</button>-->
 <!--        </div>-->
-        <div class="col-sm">
-            <div style="position: fixed;z-index: 10;left: 100px;top: 250px;display: none" id="tes" class="try">
-                <p>asddsa</p>
+        <div  class="col-sm">
+            <div style="position: fixed;z-index: 10;left: 100px;top: 90px;display: none;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" id="tes" class="try">
+                <div style="display: flex;justify-content: space-around">
+                    <img style="display: inline" src="assets/image/Frame.png">
+                    <p style="margin-bottom: 15px;display: inline;">Добавить устройство</p>
+                    <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>
+                </div>
+
+                <form s id="form" >
+
+                                <label for="ftype">Тип устройства:</label><br>
+                                <select  style="width: 182px;border-radius:8px" id="ftype" name="ftype">
+                                    <option>Выберите</option>
+                                    <option>provider_server</option>
+                                    <option>raion_commutator</option>
+                                    <option>house_commutator</option>
+                                    <option>home_router</option>
+                                </select><br>
+<!--                                <input type="text" id="ftype" name="ftype"><br>-->
+
+                               <label for="connect_id">connect_id:</label><br>
+                                <input type="text" id="connect_id" name="connect_id"><br>
+
+<!--                              <label for="id">id:</label><br>-->
+<!--                                <input type="text" id="id" name="id"><br>-->
+
+                             <label for="inf_count">Linf_count:</label><br>
+                              <input type="text" id="inf_count" name="inf_count"><br>
+
+                          <label for="lat">Широта:</label><br>
+                           <input type="text" id="lat" name="lat"><br>
+
+                           <label for="lng">Долгота:</label><br>
+                             <input type="text" id="lng" name="lng"><br>
+
+                         <label for="model">Модель роутера:</label><br>
+                          <input type="text" id="model" name="model"><br>
+
+                           <label for="on_off">вкл/выкл:</label><br>
+                    <select  style="width: 182px;border-radius:8px" id="on_off" name="on_off">
+                        <option>Выберите</option>
+                        <option>включить</option>
+                        <option>выключить</option>
+                    </select><br>
+				            <label for="smotr">Ответственный:</label><br>
+                          <input type="text" id="smotr" name="smotr"><br>
+
+
+                           </form>
+                <div style="padding-left: 95px" >
+                    <a onclick="addNewObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Отправить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector.png"></a>
+
+
+                </div>
+
             </div>
-            <a onclick="show()" href="#"><img  style="position: fixed;top: 120px;left: 105px;z-index: 10;" src="Button_add.png"></a>
+            <a onclick="show()" id="add-button" style="" href="#"><img  style="position: fixed;top: 120px;left: 105px;z-index: 10;" src="assets/image/Button_add.png"></a>
 
-            <div style="width: 100%; height:  600px" id="mapContainer"></div>
+            <div style="width: 100%; height:  650px" id="mapContainer"></div>
 
+            <div style="position: fixed;z-index: 10;right: 100px;top: 90px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" class="form2">
+                <button onclick="est('form2')">Форма для редактирования</button>
+                <form style="display: none" class="form-2" id="form2" >
+
+                    <label for="ftype2">Тип устройства:</label><br>
+                    <select  style="width: 182px;border-radius:8px" id="ftype2" name="ftype2">
+                        <option>Выберите</option>
+                        <option>provider_server</option>
+                        <option>raion_commutator</option>
+                        <option>house_commutator</option>
+                        <option>home_router</option>
+                    </select><br>
+
+
+                    <label for="connect_id2">connect_id:</label><br>
+                    <input type="text" id="connect_id2" name="connect_id2"><br>
+
+                    <label for="id2">id:</label><br>
+                    <input type="text" id="id2" name="id2"><br>
+
+                    <label for="inf_count2">Linf_count:</label><br>
+                    <input type="text" id="inf_count2" name="inf_count2"><br>
+
+                    <label for="lat2">lat:</label><br>
+                    <input type="text" id="lat2" name="lat2"><br>
+
+                    <label for="lng2">lng:</label><br>
+                    <input type="text" id="lng2" name="lng2"><br>
+
+                    <label for="model2">model:</label><br>
+                    <input type="text" id="model2" name="model2"><br>
+
+                    <label for="on_off2">on_off:</label><br>
+                    <select>
+                        <option>выберите</option>
+                        <option>выключить</option>
+                        <option>выключить</option>
+                    </select><br>
+                    <input type="text" id="on_off2" name="on_off2"><br>
+
+                    <label for="smotr2">smotr:</label><br>
+                    <input type="text" id="smotr2" name="smotr2"><br>
+
+
+                </form>
+                <button onclick="updateObjectOnMap()">Отправить</button>
+                <button onclick="deleteObjectOnMap()">Удалить</button>
+            </div>
         </div>
-<!--        <div class="col-sm">-->
-<!--            <button onclick="est('form2')">Форма для редактирования</button>-->
-<!--            <form style="display: none" class="form-2" id="form2" >-->
 
-<!--                <label for="ftype2">Type:</label><br>-->
-<!--                <input type="text" id="ftype2" name="ftype2"><br>-->
-
-<!--                <label for="connect_id2">connect_id:</label><br>-->
-<!--                <input type="text" id="connect_id2" name="connect_id2"><br>-->
-
-<!--                <label for="id2">id:</label><br>-->
-<!--                <input type="text" id="id2" name="id2"><br>-->
-
-<!--                <label for="inf_count2">Linf_count:</label><br>-->
-<!--                <input type="text" id="inf_count2" name="inf_count2"><br>-->
-
-<!--                <label for="lat2">lat:</label><br>-->
-<!--                <input type="text" id="lat2" name="lat2"><br>-->
-
-<!--                <label for="lng2">lng:</label><br>-->
-<!--                <input type="text" id="lng2" name="lng2"><br>-->
-
-<!--                <label for="model2">model:</label><br>-->
-<!--                <input type="text" id="model2" name="model2"><br>-->
-
-<!--                <label for="on_off2">on_off:</label><br>-->
-<!--                <input type="text" id="on_off2" name="on_off2"><br>-->
-
-<!--				 <label for="smotr2">smotr:</label><br>-->
-<!--                <input type="text" id="smotr2" name="smotr2"><br>-->
-
-
-<!--            </form>-->
-<!--			 <button onclick="updateObjectOnMap()">Отправить</button>-->
-<!--			 <button onclick="deleteObjectOnMap()">Удалить</button>-->
-<!--        </div>-->
     </div>
 </div>
 
 <script>
+function hide() {
+    document.getElementById('tes').style.display = "none";
+    document.getElementById('add-button').style.display = "block";
+}
 
 function est(id) {
     var x = document.getElementById(id);
@@ -194,10 +284,13 @@ function est(id) {
 }
 function show() {
     let x = document.getElementById('tes');
+    let y = document.getElementById('add-button');
     if (x.style.display === "none") {
         x.style.display = "block";
+        y.style.display = "none";
     } else {
         x.style.display = "none";
+        ;
     }
 }
     /*
