--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         }
         form{
             padding-left: 80px;
+            background:rgba(229, 229, 229, 1);
+            width: 350px;
+            border-radius: 8px;
         }
 
         label{
@@ -78,6 +81,12 @@
         }
         a{
             font-family: 'MontserratBold';
+            text-decoration: none;
+            color:white ;
+        }
+        a:hover{
+            text-decoration: none;
+            color:white ;
         }
     </style>
     <title>Title</title>
@@ -105,7 +114,7 @@
                 </defs>
             </svg>
 
-                <img style="margin-left: 10px;margin-top: 10px" src="NOVOCOMa.png">
+                <img style="margin-left: 10px;margin-top: 10px" src="assets/image/NOVOCOM.png">
             </div>
             <div class="header-center">
                 <ul style="margin: 0" class="header-center-list">
@@ -163,7 +172,7 @@
                     <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>
                 </div>
 
-                <form s id="form" >
+                <form  id="form" >
 
                                 <label for="ftype">Тип устройства:</label><br>
                                 <select  style="width: 182px;border-radius:8px" id="ftype" name="ftype">
@@ -215,10 +224,18 @@
 
             <div style="width: 100%; height:  650px" id="mapContainer"></div>
 
-            <div style="position: fixed;z-index: 10;right: 100px;top: 90px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" class="form2">
-                <button onclick="est('form2')">Форма для редактирования</button>
+            <div style="position: fixed;z-index: 10;right: 100px;top: 10px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" class="form2">
+<!--                <div style="display: flex;justify-content: space-around">-->
+<!--                    <img style="display: inline" src="assets/image/Group%201.png">-->
+<!--                    <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>-->
+<!--                    <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>-->
+<!--                </div>-->
                 <form style="display: none" class="form-2" id="form2" >
-
+                    <div style="display: flex;justify-content: space-around">
+                        <img style="display: inline" src="assets/image/Group%201.png">
+                        <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>
+                        <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>
+                    </div>
                     <label for="ftype2">Тип устройства:</label><br>
                     <select  style="width: 182px;border-radius:8px" id="ftype2" name="ftype2">
                         <option>Выберите</option>
@@ -248,20 +265,30 @@
                     <input type="text" id="model2" name="model2"><br>
 
                     <label for="on_off2">on_off:</label><br>
-                    <select>
+                    <select  style="width: 182px;border-radius:8px" id="on_off2" name="on_off2">
                         <option>выберите</option>
-                        <option>выключить</option>
+                        <option>включить</option>
                         <option>выключить</option>
                     </select><br>
-                    <input type="text" id="on_off2" name="on_off2"><br>
+<!--                    <input type="text" id="on_off2" name="on_off2"><br>-->
 
-                    <label for="smotr2">smotr:</label><br>
+                    <label for="smotr2">Ответственный:</label><br>
                     <input type="text" id="smotr2" name="smotr2"><br>
+                    <div style="" >
+                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector.png"></a>
+                        <a onclick="addNewObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
 
 
+                    </div>
                 </form>
-                <button onclick="updateObjectOnMap()">Отправить</button>
-                <button onclick="deleteObjectOnMap()">Удалить</button>
+<!--                <div style="" >-->
+<!--                    <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector.png"></a>-->
+<!--                    <a onclick="addNewObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>-->
+
+
+<!--                </div>-->
+<!--                <button onclick="updateObjectOnMap()">Отправить</button>-->
+<!--                <button onclick="deleteObjectOnMap()">Удалить</button>-->
             </div>
         </div>
 
@@ -347,7 +374,7 @@ function show() {
 	*/
    // addSVGMarkers(map);
 </script>
-<script src="./index.js"></script>
+<script src="assets/js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
