--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <div style="width: 100%; height:  650px" id="mapContainer"></div>
 
-            <div style="position: fixed;z-index: 10;right: 100px;top: 10px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" class="form2">
+            <div style="position: fixed;z-index: 10;right: 100px;top: 10px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px" id="form22" class="form2">
 <!--                <div style="display: flex;justify-content: space-around">-->
 <!--                    <img style="display: inline" src="assets/image/Group%201.png">-->
 <!--                    <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>-->
@@ -234,7 +234,7 @@
                     <div style="display: flex;justify-content: space-around">
                         <img style="display: inline" src="assets/image/Group%201.png">
                         <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>
-                        <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>
+                        <a onclick="hide2()" href="#"><img src="assets/image/exit.png"></a>
                     </div>
                     <label for="ftype2">Тип устройства:</label><br>
                     <select  style="width: 182px;border-radius:8px" id="ftype2" name="ftype2">
@@ -274,9 +274,9 @@
 
                     <label for="smotr2">Ответственный:</label><br>
                     <input type="text" id="smotr2" name="smotr2"><br>
-                    <div style="" >
-                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector.png"></a>
-                        <a onclick="addNewObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
+                    <div style="margin-left: -30px;" >
+                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/pencil-alt-solid%201.png"></a>
+                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
 
 
                     </div>
@@ -298,6 +298,10 @@
 <script>
 function hide() {
     document.getElementById('tes').style.display = "none";
+    document.getElementById('add-button').style.display = "block";
+}
+function hide2() {
+    document.getElementById('form22').style.display = "none";
     document.getElementById('add-button').style.display = "block";
 }
 
