--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 <!--                    <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>-->
 <!--                    <a onclick="hide()" href="#"><img src="assets/image/exit.png"></a>-->
 <!--                </div>-->
-                <form style="display: none" class="form-2" id="form2" >
-                    <div style="display: flex;justify-content: space-around">
+                <form style="display: none;padding-bottom: 18px;padding-top: 18px" class="form-2" id="form2" >
+                    <div style="display: flex;justify-content: space-around;margin-left: -80px">
                         <img style="display: inline" src="assets/image/Group%201.png">
                         <p style="margin-bottom: 15px;display: inline;">Изменить данные</p>
                         <a onclick="hide2()" href="#"><img src="assets/image/exit.png"></a>
@@ -267,8 +267,8 @@
                     <label for="on_off2">on_off:</label><br>
                     <select  style="width: 182px;border-radius:8px" id="on_off2" name="on_off2">
                         <option>выберите</option>
-                        <option>включить</option>
-                        <option>выключить</option>
+                        <option>1</option>
+                        <option>0</option>
                     </select><br>
 <!--                    <input type="text" id="on_off2" name="on_off2"><br>-->
 
