added new features

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <!--                              <label for="id">id:</label><br>-->
 <!--                                <input type="text" id="id" name="id"><br>-->
 
-                             <label for="inf_count">Linf_count:</label><br>
+                             <label for="inf_count">inf_count:</label><br>
                               <input type="text" id="inf_count" name="inf_count"><br>
 
                           <label for="lat">Широта:</label><br>
@@ -205,8 +205,8 @@
                            <label for="on_off">вкл/выкл:</label><br>
                     <select  style="width: 182px;border-radius:8px" id="on_off" name="on_off">
                         <option>Выберите</option>
-                        <option>включить</option>
-                        <option>выключить</option>
+                        <option>1</option>
+                        <option>0</option>
                     </select><br>
 				            <label for="smotr">Ответственный:</label><br>
                           <input type="text" id="smotr" name="smotr"><br>
@@ -252,31 +252,31 @@
                     <label for="id2">id:</label><br>
                     <input type="text" id="id2" name="id2"><br>
 
-                    <label for="inf_count2">Linf_count:</label><br>
+                    <label for="inf_count2">inf_count:</label><br>
                     <input type="text" id="inf_count2" name="inf_count2"><br>
 
-                    <label for="lat2">lat:</label><br>
+                    <label for="lat2">Широта:</label><br>
                     <input type="text" id="lat2" name="lat2"><br>
 
-                    <label for="lng2">lng:</label><br>
+                    <label for="lng2">Долгота:</label><br>
                     <input type="text" id="lng2" name="lng2"><br>
 
-                    <label for="model2">model:</label><br>
+                    <label for="model2">Модель роутера:</label><br>
                     <input type="text" id="model2" name="model2"><br>
 
-                    <label for="on_off2">on_off:</label><br>
+                    <label for="on_off2">вкл/выкл:</label><br>
                     <select  style="width: 182px;border-radius:8px" id="on_off2" name="on_off2">
-                        <option>выберите</option>
-                        <option>включить</option>
-                        <option>выключить</option>
+                        <option>Выберите</option>
+                        <option>1</option>
+                        <option>0</option>
                     </select><br>
 <!--                    <input type="text" id="on_off2" name="on_off2"><br>-->
 
                     <label for="smotr2">Ответственный:</label><br>
                     <input type="text" id="smotr2" name="smotr2"><br>
                     <div style="margin-left: -30px;" >
-                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/pencil-alt-solid%201.png"></a>
-                        <a onclick="addNewObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
+                        <a onclick="updateObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/pencil-alt-solid%201.png"></a>
+                        <a onclick="deleteObjectOnMap()" style="padding: 6px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
 
 
                     </div>
