--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@ function hide() {
     document.getElementById('add-button').style.display = "block";
 }
 function hide2() {
-    document.getElementById('form22').style.display = "none";
-    document.getElementById('add-button').style.display = "block";
+    document.getElementById('form2').style.display = "none";
+    //document.getElementById('add-button').style.display = "block";
 }
 
 function est(id) {
