--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div style="width: 100%; height:  650px;" id="mapContainer"></div>
 
 
-            <div style="background: #999999;width: 400px;position: fixed;z-index: 10;right: 300px;top: 10px;display: block;padding-top: 18px;padding-bottom: 18px;margin-top: 5px;border-radius: 9px" class="panel panel-default">
+            <div style="background: #999999;width: 400px;position: fixed;z-index: 10;right: 600px;top: 10px;display: none;padding-top: 18px;padding-bottom: 18px;margin-top: 5px;border-radius: 9px" id="panel" class="panel panel-default">
                 <table style="display: flex"  id="myTable1" class="table table-responsive tablesorter">
                     <div>
                         <img style="display: inline" src="assets/image/building-regular%201.png">
@@ -209,7 +209,7 @@
                             <p style="display: inline">Список устройств в доме по адресу:</p>
                         </div>
 
-                        <a href="#"><img style="display: inline" src="assets/image/exit.png"></a>
+                        <a onclick="document.getElementById('panel').style.display='none'" href="#"><img style="display: inline" src="assets/image/exit.png"></a>
                     </div>
 
                     <thead style="width:  100%">
