--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <option>provider_server</option>
                                     <option>raion_commutator</option>
                                     <option>house_commutator</option>
-                                    <option>home_router</option>
+                                   <!-- <option>home_router</option> -->
                                 </select><br>
 <!--                                <input type="text" id="ftype" name="ftype"><br>-->
 
@@ -237,7 +237,7 @@
                         <option>provider_server</option>
                         <option>raion_commutator</option>
                         <option>house_commutator</option>
-                        <option>home_router</option>
+                       <!-- <option>home_router</option> -->
                     </select><br>
 
 
@@ -279,7 +279,7 @@
                     <div style="margin-left: -30px;" >
                         <a onclick="updateObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Изменить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/pencil-alt-solid%201.png"></a>
                         <a onclick="deleteObjectOnMap()" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" href="#">Удалить <img style="margin-left: 5px;margin-right: 5px" src="assets/image/Vector%20(1).png"></a>
-
+						<a href="#" style="padding: 4px;background: rgb(92 ,92, 92);border-radius: 9px" onclick="disableRouter()">Power</a>
 
                     </div>
                 </form>
