--- a/index.html
+++ b/index.html
@@ -181,9 +181,18 @@
 				            <label for="smotr">Ответственный:</label><br>
                           <input type="text" id="smotr" name="smotr"><br>
 
+						  <!--
 						  <label for="cabelType">Тип кабеля:</label><br>
                           <input type="text" id="cabelType" name="cabelType"><br>
-
+							-->
+						  <label for="cabelType">Тип кабеля:</label><br>
+							<select  style="width: 182px;border-radius:8px" id="cabelType" name="cabelType">
+								<option>Выберите</option>
+								<option>Беспроводное подключение</option>
+								<option>Витая пара</option>
+								<option>Оптоволокно</option>
+							</select><br>
+						  
 						  <label for="connectType">Тип соединения:</label><br>
                           <input type="text" id="connectType" name="connectType"><br>
 
@@ -270,9 +279,17 @@
                     <label for="smotr2">Ответственный:</label><br>
                     <input type="text" id="smotr2" name="smotr2"><br>
 
-					<label for="cabelType2">Тип кабеля:</label><br>
+					<!--<label for="cabelType2">Тип кабеля:</label><br>
                     <input type="text" id="cabelType2" name="cabelType2"><br>
-
+					-->
+					<label for="cabelType2">Тип кабеля:</label><br>
+                    <select  style="width: 182px;border-radius:8px" id="cabelType2" name="cabelType2">
+                        <option>Выберите</option>
+                        <option>Беспроводное подключение</option>
+                        <option>Витая пара</option>
+						<option>Оптоволокно</option>
+                    </select><br>
+					
 					<label for="connectType2">Тип соединения:</label><br>
                     <input type="text" id="connectType2" name="connectType2"><br>
 
