--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
             type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
+	<title>NOVOCOM</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
+		::-webkit-scrollbar { /* chrome based /
+            width: 0px;  / ширина scrollbar'a /
+            background: transparent;  / опционально /
+        }
+
+        #tes{
+            -ms-overflow-style: none;  / IE 10+ /
+            scrollbar-width: none; / Firefox */
+        }
+		
         @font-face{
             font-family: 'MontserratBold';
             src:url(assets/fonts/Montserrat-Bold.woff);
